--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>KonTXT</title>
+    <meta property="og:url" content="https://konTXT.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="KonTXT | Мария Твердых">
+    <meta property="og:image" content="https://konTXT.com/0000001/avatar.jpg">
+    <meta property="og:description" content="Мария Твердых - Бла бла бла">
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        if(localStorage.getItem('theme') === 'dark') {
+          document.body.classList.add('dark')
+        } else {
+          document.body.classList.remove('dark')
+        }
+
+        if(localStorage.getItem('locale') === 'ru') {
+          document.documentElement.setAttribute('lang', 'ru');
+        } else {
+          document.documentElement.setAttribute('lang', 'en');
+        }
+      })
+    </script>
   </head>
   <body>
     <div id="app"></div>
