--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="KonTXT | Мария Твердых">
     <meta property="og:image" content="https://konTXT.com/0000001/avatar.jpg">
-    <meta property="og:description" content="Мария Твердых - Бла бла бла">
+    <meta property="og:description" content="Мария Твердых - Аккаунт в KonTXT">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         if(localStorage.getItem('theme') === 'dark') {
