fix: more fixes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KonTXT</title>
-    <meta property="og:url" content="https://konTXT.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="KonTXT | Мария Твердых">
-    <meta property="og:image" content="https://konTXT.com/0000001/avatar.jpg">
-    <meta property="og:description" content="Мария Твердых - Аккаунт в KonTXT">
+    <meta name="og:url" content="https://konTXT.com/">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="KonTXT">
+    <meta name="og:image" content="https://dev.codio.ru/KonTXT/images/logo.jpg">
+    <meta name="og:description" content="Тет-а-тет встречи с профессионалами каждую неделю 
+    для нетворкинга и формирования сильной репутации">
+    <meta name="description" content="Тет-а-тет встречи с профессионалами каждую неделю 
+    для нетворкинга и формирования сильной репутации">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         if(localStorage.getItem('theme') === 'dark') {
