--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="og:image" content="https://dev.codio.ru/KonTXT/images/logo.jpg">
     <meta name="og:description" content="Тет-а-тет встречи с профессионалами каждую неделю 
     для нетворкинга и формирования сильной репутации">
+    <meta name="profile:first_name" content="Имя" />
+    <meta name="profile:last_name" content="Фамилия" />
+    <meta name="profile:username" content="Логин" />
+    <meta name="profile:gender" content="male/female" />
+    <meta name="profile:email" content="электронный адрес" />
+    <meta name="profile:phone_number" content="номер телефона" />
     <meta name="description" content="Тет-а-тет встречи с профессионалами каждую неделю 
     для нетворкинга и формирования сильной репутации">
     <script>
@@ -28,6 +34,7 @@
         }
       })
     </script>
+    <meta name="google-site-verification" content="3gd8dvCUxCO6oAsBBDxga6gTwiUWQ5G8nVbtnSYCcLo" />
   </head>
   <body>
     <div id="app"></div>
